# gtkdecor

./: .gitignore  LICENSE  PKGBUILD  README.md  deco-button.cpp  deco-button.hpp  deco-layout.cpp  deco-layout.hpp  deco-subsurface.cpp  deco-theme.cpp  deco-theme.hpp  decoration.cpp  meson.build  release.sh
icons/: meson.build
metadata/: gtkdecor.xml  meson.build
src/: deco-layout.cpp  deco-layout.hpp  deco-subsurface.cpp  deco-subsurface.hpp  deco-theme.cpp  deco-theme.hpp  decoration.cpp  meson.build
